--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,10 @@ body {
   min-height: calc(100vh - 70px - 64px);
 }
 
+.brand-logo {
+  margin: 0;
+}
+
 .movies {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
